TODO: Still need to figure out how to fix overlaps, z-index did not work

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -18,6 +18,7 @@
 .div {
   top: 500px;
   left: 0;
+  z-index: 2; /*Add this*/
 }
 
 .submit-button {
