--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -12,6 +12,5 @@
   left: 0;
   padding-left: 60px;
   padding-right: 60px;
-}
-.container-style {
+  z-index: 1; /*Add this*/
 }
